<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mac"
            android:contentDescription="@string/mac_pro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_pro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cena_23_000z"/>


        <EditText
            android:id="@+id/pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginBottom="20dp"
            android:inputType="number"
            android:importantForAutofill="no" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mouse"
            android:contentDescription="@string/magic_mouse" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_mouse"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cena_900z"/>

        <EditText
            android:id="@+id/mouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/keyboard"
            android:contentDescription="@string/magic_keyboard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_keyboard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cena_1_400z"/>

        <EditText
            android:id="@+id/keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="number" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/webcam"
            android:contentDescription="@string/webcam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/webcam"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cena_300z"/>

        <EditText
            android:id="@+id/webcam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"/>

    </LinearLayout>

</LinearLayout>